# pyqsppack

./: .readthedocs.yaml  README.rst  Test loading failed: Error: Process exit  flipping_fit.py  improving_optimization.ipynb  nlft_examples.ipynb  num_stab_nlft.ipynb  optimization_exploration.ipynb  optimization_landscape.ipynb  optimization_landscape.py  perturbation.ipynb  perturbation_ex.py  perturbation_ex2.py  perturbation_lin_sys.ipynb  pyproject.toml  qsppack-py311.yml  quartic_opt.ipynb  recovery_examples.py  wiebe_vs_weiss.ipynb
docs/: conf.py  examples.rst  index.rst  requirements.txt
docs/examples/: hamiltonian_simulation.ipynb  kaiser_window_state.ipynb  linear_systems.ipynb  negative_power_function.ipynb  uniform_singular_value_amplification.ipynb
docs/source/: conf.py  index.rst  nlfa.rst  objective.rst  optimization.rst  optimizers.rst  solver.rst  utils.rst
docs/source/_build/doctrees/: environment.pickle  examples.doctree  index.doctree  optimization.doctree
docs/source/_build/html/: .buildinfo  examples.html  genindex.html  index.html  objects.inv  optimization.html  py-modindex.html  search.html  searchindex.js
docs/source/_build/html/_modules/: index.html
docs/source/_build/html/_modules/optimization/: QSP_solver.html  core.html  objective.html  optimizers.html  utils.html
docs/source/_build/html/_sources/: index.rst.txt
docs/source/examples/: gaussian_filter.ipynb  gaussian_state.ipynb  gibbs_state.ipynb  hamiltonian_simulation.ipynb  kaiser_window_state.ipynb  linear_systems copy.ipynb  linear_systems.ipynb  negative_power_function.ipynb  singular_value_threshold_projector.ipynb  singular_vector_transformation.ipynb  uniform_singular_value_amplification.ipynb
docs/source/optimization/: core.py
explorations/data/: nlft_test.npz  recovered_errs.npz  recovered_errs_times2.npz  recovered_errs_times4.npz
explorations/notebooks/: optimization_exploration.ipynb  optimization_landscape.ipynb  proof_help.ipynb  quartic_opt.ipynb
optimization/: QSP_solver.py  __init__.py  core.py  objective.py  optimizers.py  utils.py
qsppack/: __init__.py  nlfa.py  objective.py  optimizers.py  solver.py  utils.py
tests/: conftest.py  temp.py  test_optimizers.py  test_solver.py  test_utils.py
