[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qsppack"
version = "0.1.0"
description = "Quantum Signal Processing optimization and analysis"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "James Larsen"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/beevus77/qsp"
"Bug Tracker" = "https://github.com/beevus77/qsp/issues"
"Documentation" = "https://qsp.readthedocs.io/"

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "nbsphinx",
    "numpy",
    "scipy",
    "matplotlib",
    "ipython",
]

[tool.setuptools]
packages = ["optimization"]
