[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qsppack"
version = "0.1.0"
description = "Quantum Signal Processing optimization and analysis"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "James Larsen"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "cvxpy",
]

[project.urls]
"Homepage" = "https://github.com/beevus77/qsppack"
"Bug Tracker" = "https://github.com/beevus77/qsppack/issues"
"Documentation" = "https://qsppack.readthedocs.io/"

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme",
    "nbsphinx>=0.9.3",
    "numpy",
    "scipy",
    "matplotlib",
    "ipython",
    "cvxpy",
]

[tool.setuptools]
packages = ["optimization"]
